# birdbot

./: .env.save  .gitignore  .pre-commit-config.yaml  DOC.md  Dockerfile  README.md  antiraid.json  banners.json  birdbot.py  birdbot.service  config.json  custom_converters.py  database.py  helper.py  installservicelinux.sh  kurzgesagt.py  launcher.py  loglevels.py  make_cog.py  pyproject.toml  requirements.txt  roleassigns.json  settings.toml  startbot.py  startbot.sh  temp-load  token.txt  topics.json  topics1.json
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: deploy.yml  lint.yml
README'S/: DEV.md  DOCUMENTATION.md
app/: birdbot.py  birdtree.py
app/cogs/: _quiz.py  anon.py  automod.py  banner.py  color_select.py  dev.py  giveaway.py  help.py  misc.py  moderation.py  patreon.py  smfeed.py  topic.py
app/cogs/listeners/: error_events.py  member_events.py  message_events.py
app/utils/: app_checks.py  checks.py  config.py  custom_converters.py  errors.py  helper.py  infraction.py  make_cog.py
cogs/: Misc.py  _quiz.py  anon.py  antiraid.py  automod.py  banner.py  banners.py  clean.py  dev.py  error_events.py  filter.py  fun.py  giveaway.py  global_listeners.py  help.py  listeners.py  management.py  member_events.py  message_events.py  misc.py  moderation.py  owners.py  quiz.py  roleassign.py  smfeed.py  test.py  topic.py
cogs/listeners/: message_events.py
swearfilters/: exceptionfilter.txt  generalfilter.txt  humanitiesfilter.txt  whitelist.txt
utils/: app_checks.py  app_errors.py  birdtree.py  config.py  custom_converters.py  helper.py  infraction.py  make_cog.py
