[project]
name = "birdbot"
version = "3.0.0"
description = "The fully featured official discord bot for the kurzgesagt server"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "aiohttp==3.8.3",
    "aiosignal==1.3.1",
    "async-timeout==4.0.2",
    "attrs==22.2.0",
    "better-profanity==0.7.0",
    "black==22.12.0",
    "certifi==2022.12.7",
    "charset-normalizer==2.1.1",
    "click==8.1.3",
    "commonmark==0.9.1",
    "demoji==1.1.0",
    "discord.py==2.1.0",
    "frozenlist==1.3.3",
    "fuzzywuzzy==0.18.0",
    "gitdb==4.0.10",
    "GitPython==3.1.30",
    "idna==3.4",
    "Levenshtein==0.20.9",
    "multidict==6.0.4",
    "mypy-extensions==0.4.3",
    "numpy==1.24.1",
    "pathspec==0.10.3",
    "platformdirs==2.6.2",
    "Pygments==2.13.0",
    "pymongo==4.3.3",
    "python-dotenv==0.21.0",
    "python-Levenshtein==0.20.9",
    "rapidfuzz==2.13.7",
    "requests==2.28.1",
    "rich==13.0.0",
    "smmap==5.0.0",
    "tomli==2.0.1",
    "urllib3==1.26.13",
    "yarl==1.8.2",
]


[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
line_length = 120
profile = "black"
skip_gitignore = true
