[project]
name = "birdbot"
version = "3.0.0"
description = "The fully featured official discord bot for the kurzgesagt server"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "aiohttp==3.8.3",
    "black==22.12.0",
    "certifi==2022.12.7",
    "demoji==1.1.0",
    "discord.py==2.1.0",
    "fuzzywuzzy==0.18.0",
    "numpy==1.24.1",
    "pymongo==4.3.3",
    "python-dotenv==0.21.0",
    "requests==2.28.1",
    "isort==5.12.0",
    "rich==13.0.0",
]


[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
line_length = 120
profile = "black"
skip_gitignore = true

[tool.pyright]
reportUnusedImport = "error"
pythonVersion = "3.10"
typeCheckingMode = "basic"
ignore=[
    'app/cogs/automod.py'
]