[project]
name = "birdbot"
version = "3.0.0"
description = "The fully featured official discord bot for the kurzgesagt server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.3",
    "aiosignal==1.3.1",
    "attrs==23.2.0",
    "black==24.3.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "demoji==1.1.0",
    "discord.py==2.3.2",
    "dnspython==2.6.1",
    "frozenlist==1.4.1",
    "fuzzywuzzy==0.18.0",
    "idna==3.6",
    "isort==5.13.2",
    "Levenshtein==0.25.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "mypy-extensions==1.0.0",
    "nodeenv==1.8.0",
    "numpy==1.26.4",
    "packaging==24.0",
    "pathspec==0.12.1",
    "platformdirs==4.2.0",
    "Pygments==2.17.2",
    "pymongo==4.6.2",
    "pyright==1.1.355",
    "python-dotenv==1.0.1",
    "python-Levenshtein==0.25.0",
    "rapidfuzz==3.7.0",
    "requests==2.32.0",
    "rich==13.7.1",
    "urllib3==2.2.1",
    "yarl==1.9.4",
]


[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
line_length = 120
profile = "black"
skip_gitignore = true

[tool.pyright]
pythonVersion = "3.11"
useLibraryCodeForTypes = true
reportUnusedImport = "error"
typeCheckingMode = "basic"
include=[
    'app',
    'startbot.py'
]
exclude=[
    "**/node_modules",
    "**/__pycache__",
    ".venv" # Replace with your venv name
]
ignore=[
    'app/cogs/automod.py'
]
